Changed about me texts, made pictures of room of better resolution

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,13 +17,13 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
                 <div class="images">
                     <div class="pers-photos">
                         <img
-                        src="/img/about-person-opt.jpg"
-                        alt=""
-                        width="400"
-                        class="personal-photo"
-                    />
+                            src="/img/about-person-opt.jpg"
+                            alt=""
+                            width="400"
+                            class="personal-photo"
+                        />
                     </div>
-                    
+
                     <div class="proc-photos">
                         <img
                             src="/img/about-process.jpg"
@@ -61,32 +61,32 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
             <div class="about-text">
                 <h2>Steckbrief</h2>
                 <p>
-                    Seitdem ich im 1992 den ersten Kurs klassische Massage
-                    gemacht habe, hatte ich immer die Idee den Leuten zu helfen,
-                    die Verspannungen oder sogar Schmerzen haben. Ich arbeitete
-                    als Französisch Lehrerin und danach als Managerin in einer
-                    Firma in Tscheljabinsk und mein Hobby war das Massieren. Es
-                    machte mir viel Spass.
+                    Seitdem ich 1992 den ersten Kurs klassische Massage gemacht
+                    hatte, hatte ich immer die Idee den Leuten zu helfen, die
+                    Verspannungen oder sogar Schmerzen haben und Entspannung
+                    brauchen. Ich arbeitete als Französisch Lehrerin und danach
+                    als Managerin in Firmen in Tscheljabinsk (Russland) und mein
+                    Hobby war das Massieren. Es machte mir viel Spass.
                 </p>
                 <p>
                     Im Jahr 2012 entschied ich mich, dass ich massieren nicht
-                    mehr nur als mein Hobby, sondern als meinen Job betreiben
+                    mehr nur als mein Hobby, sondern als meine Arbeit betreiben
                     und meine spezifischen Kenntnisse verbessern und vertiefen
-                    möchte. Das erste, was ich gemacht hatte, war ein Kurs über
-                    Hiromassage nach der Methode von Enrique Garcia. Coole
-                    Entspannungsmassage. Danke diesen Techniken habe ich mich
-                    völlig in das Massieren verliebt.
+                    möchte. Ich begann mit einem Kurs über Hiromassage nach der
+                    Methode von Enrique Garcia. Eine wunderbare Art der
+                    Entspannungsmassage. Dank diesen Techniken habe ich mich
+                    endgültig in das Massieren verliebt.
                 </p>
                 <p>
                     In der Folge habe ich verschiedene weitere Techniken gelernt
-                    und zwar Lymphdrainage, Lomi-Lomi, thailändische Massage,
-                    Sportmassage sowie Taping. In dieser Zeit hatte ich für mich
-                    beschlossen, dass ich unbedingt eine medizinische Ausbildung
-                    benötigte. Im Jahr 2016 hatte ich das medizinische Studium
-                    in den diplomierten Bereichen Krankenschwester und
-                    medizinische Masseurin abgeschlossen. Diese 3 Jahre waren
-                    sehr anstrengend und fordernd, aber auch sehr spannend,
-                    interessant und lehrreich.
+                    und zwar Lymphdrainage, hawaiianische Lomi-Lomi Nui,
+                    thailändische Massage, Sportmassage sowie Taping. Dabei
+                    hatte ich für mich beschlossen, dass ich unbedingt eine
+                    medizinische Ausbildung benötigte. Im Jahr 2016 hatte ich
+                    das medizinische Studium in den diplomierten Bereichen
+                    Krankenschwester und medizinische Masseurin abgeschlossen.
+                    Diese 3 Jahre waren sehr anstrengend und fordernd, aber auch
+                    sehr spannend, interessant und lehrreich.
                 </p>
                 <p>
                     Während des Studiums habe ich angefangen in einer Klinik für
@@ -101,35 +101,40 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
                 </p>
                 <p>
                     Seit dem Umzug in die Schweiz im Frühling 2018 konnte ich
-                    mein medizinisches Wissen neben klassischer Massage auch bei
+                    mein medizinisches Wissen neben klassischer Massage bei
                     Sportmannschaften einsetzen. Dies sowohl im Bereich
                     Eishockey (Mannschaft der 2. Liga) als auch beim
                     Gehörlosensport (Nationalteams Curling und Futsal).
                 </p>
                 <p>
-                    Da meine Diplome in der Schweiz nicht anerkannt wurden wurde
-                    ich wieder eine Schülerin und zwar in einer Massageschule in
-                    Zürich. Dort habe ich klassische Massage und medizinische
-                    Grundlagen studiert. Obwohl ich schon viel wusste, habe ich
-                    diverses Neues für mich gelernt, zum Beispiel die
-                    Funktionsmassage. So konnte ich meine Massagefähigkeiten
-                    erweitern. Von welchen auch Sie als meine Kundin oder mein
-                    Kunde profitieren können.
+                    Im Jahr 2019 hatte ich ein grosses Glück gehabt und eine
+                    Stelle als Masseurin bei der Firma MMS <a href="https://www.medicalmassageservice.ch/" target="_blank">https://www.medicalmassageservice.ch/</a> gefunden, die
+                    Massage am Arbeitsplatz bei verschiedenen Firmen anbietet.
+                    Dort bin ich bis jetzt am Arbeiten.
+                </p>
+                <p>
+                    Da meine Diplome in der Schweiz nicht anerkannt wurden,
+                    wurde ich wieder eine Schülerin und zwar in einer
+                    Massageschule in Zürich. Dort habe ich klassische Massage
+                    und medizinische Grundlagen studiert. Obwohl ich schon viel
+                    wusste, habe ich diverses Neues für mich dazu gelernt. Zum
+                    Beispiel die Funktionsmassage. So konnte ich mein
+                    Massagewissen erweitern. Von welchem auch Sie als meine
+                    Kundin oder mein Kunde profitieren können.
                 </p>
                 <h2>Ausbildungen</h2>
-                <p>- Diplomierter Berufsmasseur bei der Fachschule Bodyfeet</p>
-                <p>- Diplomierter Dorn-Therapeut bei der Fachschule Bodyfeet</p>
                 <p>
-                    - Diplomierter Gesundheitsmasseur bei der Fachschule
-                    Bodyfeet
+                    2016 - Diplomierte Krankenschwester und medizinische
+                    Masseurin bei der staatliche medizinische Universität
+                    Südural (Tscheljabinsk, Russland)
                 </p>
                 <p>
-                    - Kopfschmerz- und Migränetherapie bei der Fachschule
-                    Bodyfeet
+                    2017 - Fortbildung «Therapeutisches Taping» bei der Akademie
+                    für therapeutisches Taping Orthodynamik (Moskau)
                 </p>
                 <p>
-                    - Professionelle Sportmassage bei der Fachschule
-                    Bodyfeeteschwerden befreit
+                    2022 - Diplomierte Berufsmasseurin bei der Akademie für
+                    Prävention, Komplementärtherapie und Massage ACOMED (Zürich)
                 </p>
             </div>
         </div>
@@ -245,7 +250,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
             display: none;
         }
         .studio-photos img {
-           width: 100%;
+            width: 100%;
         }
 
         .slide-show {
