Added review section for desktop an dmobile version

--- a/src/components/BannerHome.astro
+++ b/src/components/BannerHome.astro
@@ -42,6 +42,7 @@ import Menu from "./Menu.astro";
   background-color: #EFD3D7;
   position: relative;
   box-sizing: border-box;
+  z-index: 20;
 }
 
 .main-image {
