--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -257,6 +257,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
         border-radius: 4px;
         padding-right: 10px;
         padding-left: 10px;
+        box-sizing: border-box;
     }
     .contact-form label {
         width: 100px;
