Added reviews slides for tablets

--- a/src/components/CardMassage.astro
+++ b/src/components/CardMassage.astro
@@ -46,7 +46,7 @@ const { imgPath1, href1, title1, body1, body2, collapseLinkId} = Astro.props;
 		let textId = this.id + "text"
 		let textElement = document.getElementById(textId)
 		if (this.innerHTML === "weiterlesen") {
-			this.innerHTML = "schlissen";
+			this.innerHTML = "schliessen";
 		} else {
 			this.innerHTML = "weiterlesen";
 		}
