--- a/src/components/CardMassageReverse.astro
+++ b/src/components/CardMassageReverse.astro
@@ -45,7 +45,7 @@ const { imgPathRev, hrefRev, titleRev, bodyRev1, bodyRev2, collapseLinkIdRev} = 
 		let textIdRev = this.id + "text"
 		let textElementRev = document.getElementById(textIdRev)
 		if (this.innerHTML === "weiterlesen") {
-			this.innerHTML = "schlissen";
+			this.innerHTML = "schliessen";
 		} else {
 			this.innerHTML = "weiterlesen";
 		}
