changed revies texts, smal fixes

--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -35,7 +35,7 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         <div class="slide-text">
             <p>
                 She was amazing! Attentive, a great listener and communicator,
-                working out tough tension spots in a way I didn’t even, know was
+                working out tough tension spots in a way I didn't even, know was
                 possible! I wish I could afford to see her every week!
             </p>
             <p>- Maria</p>
