--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -29,15 +29,12 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         </div>
         <div class="slide-text">
             <p>
-                I very much enjoyed the attention to detail when adjusting
-                various parts of the body and stretching or massaging based on
-                what's needed, and in a way that can actually help your pain
-                points feel better. In comparison to a massage from a place like
-                massage envy, my experience here felt way more therapeutic and
-                would provide lasting results for the next few days. I highly
-                recommend and will definitely be returning!
+                This place is amazing. The combination massage was very much
+                needed. I didn't realize how tight my body was until the session
+                was over. Oh boy was it tense but afterwards I felt so much
+                relief. I would recommend anyone to give it a try.
             </p>
-            <p>- Peter</p>
+            <p>- Kate</p>
         </div>
         <!-- <img src={slideImg1} alt="" /> -->
     </div>
@@ -54,13 +51,8 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
         </div>
         <div class="slide-text">
             <p>
-                I very much enjoyed the attention to detail when adjusting
-                various parts of the body and stretching or massaging based on
-                what's needed, and in a way that can actually help your pain
-                points feel better. In comparison to a massage from a place like
-                massage envy, my experience here felt way more therapeutic and
-                would provide lasting results for the next few days. I highly
-                recommend and will definitely be returning!
+                She knows her stuff! Walked out feeling brand spankin' new. I'll
+                definitely be back.
             </p>
             <p>- Peter</p>
         </div>
