--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -53,35 +53,27 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     <div class="slide">
         <div class="slide-text">
             <p>
-                I very much enjoyed the attention to detail when adjusting
-                various parts of the body and stretching or massaging based on
-                what's needed, and in a way that can actually help your pain
-                points feel better. In comparison to a massage from a place like
-                massage envy, my experience here felt way more therapeutic and
-                would provide lasting results for the next few days. I highly
-                recommend and will definitely be returning!
+                Today I am a very happy and relaxing and friendly atmosphere.
+                Really enjoyable experience, Cannot recommend enough. Thanks to
+                the
             </p>
-            <p>- Katerina</p>
+            <p>- Marry</p>
         </div>
         <div class="slide-text">
             <p>
-                She was amazing! Attentive, a great listener and communicator,
-                working out tough tension spots in a way I didn’t even, know was
-                possible! I wish I could afford to see her every week!
+                This place is amazing. The combination massage was very much
+                needed. I didn't realize how tight my body was until the session
+                was over. Oh boy was it tense but afterwards I felt so much
+                relief. I would recommend anyone to give it a try.
             </p>
-            <p>- Maria</p>
+            <p>- Mark</p>
         </div>
         <div class="slide-text">
             <p>
-                I prefer heavy pressure for my massages, I usually get deep
-                tissue or pressure point massages, and my masseuse did not
-                disappoint! She did some traditional massage techniques along
-                with stretching and back walking, all was fantastic. Writing
-                this review makes me want to call and book another! Great
-                service and they were able to get me an appointment on the same
-                day I called.
+                She knows her stuff! Walked out feeling brand spankin' new. I'll
+                definitely be back.
             </p>
-            <p>- Peter</p>
+            <p>- Gordon</p>
         </div>
     </div>
 
@@ -216,7 +208,6 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     }
 
     @media (max-width: 960px) {
-
     }
 
     @media (max-width: 600px) {
@@ -228,11 +219,9 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
             display: block;
             width: 100%;
             /* max-width: 800px; */
-            /* height: 300px;
+        /* height: 300px;
             position: relative;
             overflow: hidden;
         } */
-
     }
-
 </style>
