--- a/src/components/BannerHome.astro
+++ b/src/components/BannerHome.astro
@@ -19,7 +19,7 @@ import Menu from "./Menu.astro";
           </div>
           <div class="header-buttons">
               <ButtonGrey href="/contacts/" text="MASSAGE BUCHEN"/>
-              <span class="button-pink"><ButtonPink href="#massage-price" text="PRESE"/></span>
+              <span class="button-pink"><ButtonPink href="#massage-price" text="PREISE"/></span>
           </div>   
         </div>    
       </div>
