--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -55,7 +55,7 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
             <p>
                 Today I am a very happy and relaxing and friendly atmosphere.
                 Really enjoyable experience, Cannot recommend enough. Thanks to
-                the
+                the therapist.
             </p>
             <p>- Marry</p>
         </div>
