menu underline fix

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -9,9 +9,9 @@ const currentPath = pathName.slice(1); // remove the first "/"
 
   <ul id="menu" class="header-menu">
     <li><a class={currentPath === "" ? "active" : ""} href="/">Home</a></li>
-    <li><a class={currentPath === "about" ? "active" : ""} href="/about">Über mich</a></li>
-    <li><a class={currentPath === "massage" ? "active" : ""} href="/massage">Massage</a></li>
-    <li><a class={currentPath === "contacts" ? "active" : ""} href="/contacts">Kontakte</a></li>
+    <li><a class={currentPath === "about" ? "active" : ""} href="/about/">Über mich</a></li>
+    <li><a class={currentPath === "massage" ? "active" : ""} href="/massage/">Massage</a></li>
+    <li><a class={currentPath === "contacts" ? "active" : ""} href="/contacts/">Kontakte</a></li>
   </ul>
 
   <div class="hamburger-menu">
