--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ import { Icon } from "astro-icon";
 						<div>
 							<div class="addr-place">
 								<p>SALZGROTTE</p>
-								<a href="https://salzgrotte.ch" target="_blank">
+								<a href="https://salzgrotte.ch/offer-prices/" target="_blank">
 									salzgrotte.ch
 								</a>
 							</div>
@@ -111,7 +111,7 @@ import { Icon } from "astro-icon";
 		<!-- quote -->
 		<div class="quote">
 			<p>
-				„Die Gesundheit überwiegt alle äußeren Güter so sehr, dass ein
+				„Die Gesundheit überwiegt alle äusseren Güter so sehr, dass ein
 				gesunder Bettler glücklicher als ein kranker König ist.“
 			</p>
 			<p>Arthur Schopenhauer</p>
@@ -158,6 +158,7 @@ import { Icon } from "astro-icon";
 				Versicherung.
 			</p>
 		</div>
+		<!-- Reviews -->
 		<div class="reviews">
 			<h1>Bewertungen</h1>
 			<div class="reviews-desktop">
@@ -326,7 +327,7 @@ import { Icon } from "astro-icon";
 		.reviews-desktop {
 			display: none;
 		}
-		
+
 		.reviews-tablet {
 			display: block;
 		}
