hid reviews, small fixes

--- a/src/components/BannerHome.astro
+++ b/src/components/BannerHome.astro
@@ -13,7 +13,7 @@ import Menu from "./Menu.astro";
           <div class="welcome-text">
             <h1>Massage</h1>
             <p class="desktop">Eine halbe Stunde Massage ist absolut notwendig, 
-              außer, wenn man sehr beschäftigt ist, 
+              ausser, wenn man sehr beschäftigt ist, 
               dann braucht man eine ganze Stunde.</p>
             <p class="mobile">in Kloten, Weiach</p>
           </div>
