switched contacts, layout changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -437,5 +437,9 @@ import { Icon } from "astro-icon";
 		.reviews h1 {
 			font-size: 26px;
 		}
+
+		.reviews p {
+			padding-bottom: 30px;
+		}
 	}
 </style>
