added contradictions text, changed h1, h2 spacings, pages bottom spacings

--- a/src/components/BannerHome.astro
+++ b/src/components/BannerHome.astro
@@ -91,6 +91,7 @@ import Menu from "./Menu.astro";
   font-size: 64px;
   font-weight: 600;
   margin-bottom: 20px;
+  color: white;
 }
 
 .welcome-text p {
