--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,8 @@ const { title } = Astro.props;
 	}
 	h1, h2, h3, h4, h5, h6 { 
 		font-family: "Philosopher", sans-serif;
-		margin: 0; 
+		margin: 0;
+		color: #8e9aaf; 
 	}
 	p, a, li {
 		font-family: "Mulish", sans-serif;
