--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -160,7 +160,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
     }
 
     .page-title {
-        padding: 20px 40px;
+        padding: 40px 40px;
         text-align: center;
     }
 
@@ -211,8 +211,10 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
         display: none;
     }
 
+    /* about text */
+
     .about-text {
-        padding: 0 40px 20px 40px;
+        padding: 20px 40px 40px 40px;
         max-width: 800px;
         margin: 0 auto;
     }
