--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -204,7 +204,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
     }
 
     .page-title {
-        padding: 20px 40px;
+        padding: 40px 40px;
         text-align: center;
     }
 
@@ -268,7 +268,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
     /* Contact form */
 
     .contact-form {
-        padding: 20px 40px;
+        padding: 20px 40px 40px 40px;
         max-width: 600px;
         margin: 0 auto;
     }
