--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -13,6 +13,7 @@ import Footer from "../components/Footer.astro";
             <div class="page-title">
                 <h1>Massage</h1>
             </div>
+            <!-- massage cards -->
             <div class="card-section">
                 <CardMassage
                     collapseLinkId="collapse1"
@@ -39,7 +40,51 @@ import Footer from "../components/Footer.astro";
                     body2="<p>Die Sportmassage sorgt für:</p><ul><li>die Aktivierung des Kreislaufsystems</li><li>die Erhöhung der Sauerstoffzufuhr</li><li>die verbesserte Ableitung von Schlacken</li><li>die Vermeidung einer zu schnellen Ermüdung</li><li>die Beseitigung von Schmerzen durch überbeanspruchte Muskeln</li><li>die Beschleunigung den Heilungsprozess bei Verletzungen</li><li>die Steigerung des Wohlbefindens</li><li>die Aktivierung des zentralen Nervensystems</li></ul><p>Bei einer Sportmassage unterscheidet man zwischen der Vorbereitungsmassage, der Trainingsmassage, der Zwischenmassage sowie der Regenerationsmassage.</p></br><p>Da die Sportmassage auch den Effekt eines Aufwärmens hat, wird auf diese Weise auch möglichen Verletzungen beim Sport vorgebeugt. Im Anschluss an die sportliche Aktivität soll die Sportmassage dazu beitragen, einen schmerzhaften Muskelkater zu unterbinden. Nach den sportlichen Belastungen wird der Körper durch die Anwendung von bestimmten Griffen behandelt, umso besser regenerieren zu können. Sie dient zum raschen Abbau von Stoffwechselschlacken, damit diese sich nicht im Muskelgewebe festsetzen. Zudem soll die Leistungsfähigkeit des Sportlers erhöht werden.</p></br><p>Doch nicht nur für Leistungssportler ist eine Sportmassage geeignet. Auch für Freizeitsportler oder für Alltag und Berufsleben kann eine solche Massage von Vorteil sein, da sie eine positive Wirkung auf die Muskulatur hat und verkrampfte und überdehnte Muskeln entspannt. Zudem werden unterforderte Muskeln und Gewebe angeregt sowie die Sauerstoffversorgung verbessert.</p></br><p>Neben Sportlern können auch Menschen, die aufgrund von falscher Sitzhaltung, langem Autofahren, langer Arbeit am Schreibtisch bzw. Computer unter</p><ul><li>Rückenschmerzen</li><li>Nackenschmerzen</li><li>Stress</li></ul><p>leiden, von einer Sportmassage profitieren, da die Massage gezielt die dadurch entstehenden Verklebungen und Verspannungen behandelt.</p>"
                 />
             </div>
-            <!-- TODO get rid of top margin of 20px -->
+            <!-- contraindications -->
+            <div class="contradict-section">
+
+                <h2>Kontraindikationen</h2>
+
+                <h3>Absolute Kontraindikationen</h3>
+
+                <p>Bei folgenden Fällen darf generell nicht massiert werden:</p>
+                <ul>
+                    <li>fieberhafte Erkrankungen</li>
+                    <li>Entzündungen jeglicher Art</li>
+                    <li>akute Thrombose, Thrombophlebitis, arterielle Durchblutungsstörungen</li>
+                    <li>frischer Herzinfarkt, Herzmuskelschwäche und andere schwere
+                        Herzerkrankungen</li>
+                    <li>Krebserkrankungen, Tumore</li>
+                    <li>frische Verletzungen des Bewegungsapparates (Knochenbrüche,
+                        Verstauchungen, Muskelzerrungen, Muskelrisse);</li>
+                    <li>Hauterkrankungen im akuten Stadium,</li>
+                    <li>Verletzungen der Integrität der Haut (Geschwüre, Verbrennungen,
+                        Wunden),</li>
+                    <li>Infektionensktankheiten</li>
+                    <li>gewisse neurologische Erkrankungen</li>
+                    <li>während der ersten drei Schwangerschaftsmonaten sowie bei
+                        Abortgefahr (Fehlgeburt)</li>
+                </ul>
+
+                <h3>Relative Kontraindikationen</h3>
+                <p>Mit diesem Begriff definiert man Situationen, in denen die Massage nur
+                    eingeschränkt möglich ist, z.B. Beinvenenthrombose, bei der eine Schulter-Arm
+                    Massage durchgeführt werden kann.</p>
+
+                <div class="contradict-bold">
+                    <p><b>Diese Liste ist nicht abschliessend. Bei Unklarheiten ist eine Rücksprache mit
+                        dem Arzt angezeigt.</b></p>
+                </div>
+                
+                <p>Sollten Sie in der Vergangenheit an einer der oben aufgelisteten Krankheiten /
+                    Beschwerden gelitten haben oder leiden Sie momentan darunter, möchte ich
+                    Sie bitten, mich zum Zeitpunkt der Terminvereinbarung darüber zu
+                    informieren. Bitte setzen Sie mich spätestens während der Anamnese in
+                    Kenntnis über allfällige Krankheiten/Beschwerden und über vergangene und
+                    operative Eingriffe und Unfälle.</p>
+            </div>
+
+            <!-- prices -->
             <div class="price-section">
                 <h2>Preise</h2>
                 <div class="prices">
@@ -82,16 +127,20 @@ import Footer from "../components/Footer.astro";
     }
 
     .page-title {
-        padding: 20px 40px;
+        padding: 40px 40px;
         text-align: center;
     }
+
+    /* massage cards */
 
     .card-section {
         padding: 0 40px;
     }
 
+    /* prices */
+
     .price-section {
-        padding: 0 40px 20px 40px;
+        padding: 0 40px 40px 40px;
         text-align: center;
         max-width: 800px;
         margin: 0 auto;
@@ -114,6 +163,29 @@ import Footer from "../components/Footer.astro";
         margin-bottom: 8px;
     }
 
+    /* contradictions */
+
+    .contradict-section {
+        padding: 20px 40px;
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+    .contradict-section h2 {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+
+    .contradict-section h3 {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+
+    .contradict-bold {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
     @media (max-width: 600px) {
         .massage {
             padding-top: 70px;
@@ -127,6 +199,8 @@ import Footer from "../components/Footer.astro";
         .card-section {
             padding: 0 20px;
         }
+
+        /* prices */
 
         .price-section {
             padding: 0 20px 20px 20px;
@@ -143,5 +217,12 @@ import Footer from "../components/Footer.astro";
             margin-bottom: 8px;
         }
 
+        /* contradictions */
+
+        .contradict-section {
+            padding: 0 20px 20px 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
     }
 </style>
