--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -255,7 +255,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
         }
 
         .slide-show {
-            padding: 0 20px 20px 20px;
+            padding: 0 20px;
             text-align: center;
             display: block;
         }
