--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -333,6 +333,11 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             padding-bottom: 20px;
         }
 
+        .address-map {
+            padding: 0 20px 20px 20px;
+        }
+
+
         .icon-text {
             gap: 6px;
         }
@@ -345,6 +350,14 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
         .home-icon {
             width: 18px;
             height: 18px;
+        }
+
+        /* contact forms */
+
+        .contact-form {
+            padding: 0 20px 20px 20px;
+            max-width: 600px;
+            margin: 0 auto;
         }
     }
 </style>
