--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -207,6 +207,10 @@ import Footer from "../components/Footer.astro";
             /* text-align: left; */
         }
 
+        .price-section h2 {
+            margin: 0 20px 20px 20px;
+        }
+
         .price-text {
             text-align: left;
         }
