added an arrow to weiterlesen, added a text to massage

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -155,7 +155,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             <div class="contact-form">
                 <h2>Für alles andere</h2>
                 <form name="contact-general" method="POST" data-netlify="true">
-                    <input type="hidden" name="subject" value="Massage details inquiry" />
+                    <input type="hidden" name="subject" value="Anfrage Massage" />
                     <p>
                       <p><label>Vorname: </label></p>
                       <input type="text" name="name" required/>
@@ -209,7 +209,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
     }
 
     .address-map {
-        padding: 0 40px 20px 40px;
+        padding: 0 40px 40px 40px;
         max-width: 800px;
         margin: 0 auto;
         display: flex;
@@ -268,7 +268,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
     /* Contact form */
 
     .contact-form {
-        padding: 20px 40px 40px 40px;
+        padding: 0 40px 40px 40px;
         max-width: 600px;
         margin: 0 auto;
     }
