--- a/src/components/CardMassage.astro
+++ b/src/components/CardMassage.astro
@@ -25,7 +25,7 @@ const { imgPath1, href1, title1, body1, body2, collapseLinkId} = Astro.props;
 			</div>
 			<div>
 				{body1.map((paragraph) => <p>{paragraph}</p>)}
-				<p id={collapseLinkId} class="card-link">weiterlesen</p> 
+				<p id={collapseLinkId} class="card-link">weiterlesen ⯆</p> 
 			</div>	
 		</div>
 	</div>
@@ -45,10 +45,10 @@ const { imgPath1, href1, title1, body1, body2, collapseLinkId} = Astro.props;
 		collapsible[i].addEventListener("click", function() {		
 		let textId = this.id + "text"
 		let textElement = document.getElementById(textId)
-		if (this.innerHTML === "weiterlesen") {
-			this.innerHTML = "schliessen";
+		if (this.innerHTML === "weiterlesen ⯆") {
+			this.innerHTML =   "schliessen &nbsp;&nbsp;⯅";
 		} else {
-			this.innerHTML = "weiterlesen";
+			this.innerHTML = "weiterlesen ⯆";
 		}
 		if (textElement.style.display === "block") {
 			textElement.style.display = "none";
