--- a/src/components/CardMassageReverse.astro
+++ b/src/components/CardMassageReverse.astro
@@ -24,7 +24,7 @@ const { imgPathRev, hrefRev, titleRev, bodyRev1, bodyRev2, collapseLinkIdRev} = 
 			</div>
 			<div>
 				{bodyRev1.map((parag) => <p>{parag}</p>)}
-				<p id={collapseLinkIdRev} class="card-link-rev">weiterlesen</p> 
+				<p id={collapseLinkIdRev} class="card-link-rev">weiterlesen ⯆</p> 
 			</div>	
 		</div>
 		<img src={imgPathRev} class="card-img" alt="Klassische Massage" />
@@ -44,10 +44,10 @@ const { imgPathRev, hrefRev, titleRev, bodyRev1, bodyRev2, collapseLinkIdRev} = 
 		collapsRev[i].addEventListener("click", function() {		
 		let textIdRev = this.id + "text"
 		let textElementRev = document.getElementById(textIdRev)
-		if (this.innerHTML === "weiterlesen") {
-			this.innerHTML = "schliessen";
+		if (this.innerHTML === "weiterlesen ⯆") {
+			this.innerHTML = "schliessen &nbsp;&nbsp;⯅";
 		} else {
-			this.innerHTML = "weiterlesen";
+			this.innerHTML = "weiterlesen ⯆";
 		}
 		if (textElementRev.style.display === "block") {
 			textElementRev.style.display = "none";
