massage text change on index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,19 +125,19 @@ import { Icon } from "astro-icon";
 					imgPath="img/massage1-opt.jpg"
 					href="/massage/"
 					title="Klassische Massage"
-					body="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
+					body="Die Klassische Massage ist eine äusserliche, manuelle Behandlung zur Verbesserung/Beseitigung und Prävention von Beschwerden im Bereich des Bewegungsapparates (Muskeln, Sehnen, Bänder, Gelenke, und Nerven) und zur psychischen Entspannung."
 				/>
 				<Card
 					imgPath="img/massage2-opt.jpg"
 					href="/massage/"
 					title="Entspannungsmassage"
-					body="Bei einer Entspannungsmassage werden durch langsame und rhythmischen Knetungen und Streichungen des Gewebes die Durchblutung der Haut, Muskulatur und der Sehnen angeregt."
+					body="Als Entspannungsmassage wird eine Massage bezeichnet, die nicht aus medizinischen Gründen durchgeführt wird, sondern ausschließlich der Entspannung dient. Sie dient vor allem zum Abbau von Stress auf geistiger und körperlicher Ebene und zur Steigerung des Wohlbefindens."
 				/>
 				<Card
 					imgPath="img/massage3-opt.jpg"
 					href="/massage/"
 					title="Sportmassage"
-					body="Die Sportmassage ist eine Art der Massage, die im Bereich des Sports einerseits zur Leistungssteigerung durch die verbesserte Regeneration nach Belastungen, andererseits zur Vermeidung von Verletzungen angewendet wird."
+					body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen."
 				/>
 			</div>
 		</div>
