form name atribute change

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -129,19 +129,19 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
                     <input type="hidden" name="subject" value="Massage details inquiry" />
                     <p>
                       <p><label>Vorname: </label></p>
-                      <input type="text" name="name" required/>
+                      <input type="text" name="Vorname" required/>
                     </p>
                     <p>
                         <label>Nachname: </label>
-                        <input type="text" name="name" />
+                        <input type="text" name="Nachname" />
                     </p>
                     <p>
                         <label>Telefonnummer: </label>
-                        <input type="tel" name="name" required/>
+                        <input type="tel" name="Telefonnummer" required/>
                     </p>
                     <p>
                       <label>Email: </label>
-                      <input type="email" name="email" required/>
+                      <input type="email" name="Email" required/>
                     </p>
                     <p>
                       <label>Nachricht: </label>
@@ -158,19 +158,19 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
                     <input type="hidden" name="subject" value="Anfrage Massage" />
                     <p>
                       <p><label>Vorname: </label></p>
-                      <input type="text" name="name" required/>
+                      <input type="text" name="Vorname" required/>
                     </p>
                     <p>
                         <label>Nachname: </label>
-                        <input type="text" name="name" />
+                        <input type="text" name="Nachname" />
                     </p>
                     <p>
                         <label>Telefonnummer: </label>
-                        <input type="tel" name="name" required/>
+                        <input type="tel" name="Telefonnummer" required/>
                     </p>
                     <p>
                       <label>Email: </label>
-                      <input type="email" name="email" required/>
+                      <input type="email" name="Email" required/>
                     </p>
                     <p>
                       <label>Nachricht: </label>
