added data- attr to input fields

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -129,11 +129,11 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
                     <input type="hidden" name="subject" value="Massage details inquiry" />
                     <p>
                       <p><label>Vorname: </label></p>
-                      <input type="text" name="Vorname" required/>
+                      <input type="text" name="Vorname" data-name="name" required/>
                     </p>
                     <p>
                         <label>Nachname: </label>
-                        <input type="text" name="Nachname" />
+                        <input type="text" name="Nachname" data-surname="surname"/>
                     </p>
                     <p>
                         <label>Telefonnummer: </label>
@@ -158,11 +158,11 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
                     <input type="hidden" name="subject" value="Anfrage Massage" />
                     <p>
                       <p><label>Vorname: </label></p>
-                      <input type="text" name="Vorname" required/>
+                      <input type="text" name="Vorname" data-name="name" required/>
                     </p>
                     <p>
                         <label>Nachname: </label>
-                        <input type="text" name="Nachname" />
+                        <input type="text" name="Nachname" data-surname="surname" />
                     </p>
                     <p>
                         <label>Telefonnummer: </label>
